--- a/Hi.UrlRewrite.Tests/packages.config
+++ b/Hi.UrlRewrite.Tests/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Moq" version="4.2.1409.1722" targetFramework="net45" />
+  <package id="Sitecore.Kernel.NoReferences" version="8.2.171121" targetFramework="net452" developmentDependency="true" />
+  <package id="Sitecore.Logging.NoReferences" version="8.2.171121" targetFramework="net452" developmentDependency="true" />
 </packages>
